ScrollBar fix

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -293,10 +293,6 @@
   border-radius: 50%;
   width: 35px;
   height: 35px;
-  margin: 10px;
-  /* width: 2rem; */
-  /* margin: 0 auto; */
-  /* margin-top: 7px; */
 }
 
 #welcome-wrapper {
