--- a/src/app/shared/uikit/components/card/card.component.css
+++ b/src/app/shared/uikit/components/card/card.component.css
@@ -147,3 +147,14 @@
   position: absolute;
   right: 5%;
 }
+*::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+*::-webkit-scrollbar-track {
+  background: orange;        /* color of the tracking area */
+}
+*::-webkit-scrollbar-thumb {
+  background-color: blue;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid orange;  /* creates padding around scroll thumb */
+}
